<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test_2.2</string>
    <string name="test_activity_name">TestActivity</string>
    <string name="btn_webview">WebView</string>
    <string name="btn_ali">支付宝</string>
    <string name="img_content">image</string>
    <string name="title_bar">标题</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="empty">empty</string>
    <string name="empty_0">0%</string>
    <string name="menu">菜单</string>
    <string name="menu_cancel">取消</string>
    <string name="cancel">取消</string>
    <string name="test">Test</string>

</resources>
