<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnWebview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_webview" />

    <Button
        android:id="@+id/btnAli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ali" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu" />

</LinearLayout>
